Add the other message events
